Fix display of attachments; don't wrap if not necessary
However, this prevents text-overflow from working on the browsers that
support it.  Maybe someone who knows CSS better can figure out some
magic (although this is only an issue when the attachment name is a
single string longer than 500px, which will probably rarely happen in
real life).

--- a/imp/themes/default/dimp/screen.css
+++ b/imp/themes/default/dimp/screen.css
@@ -726,11 +726,12 @@ div.dimpActionsCompose, div.dimpActionsMsg {
 
 /* Attachment file list */
 #attach_list {
+    overflow: hidden;
     padding-left: 15px;
+    width: 500px;
 }
 #attach_list li {
     padding-top: 5px;
-    width: 500px;
 }
 #attach_list span.remove {
     border: 1px solid #ccc;
@@ -743,12 +744,6 @@ div.dimpActionsCompose, div.dimpActionsMsg {
 }
 #attach_list span.attachName {
     color: blue;
-    display: -moz-inline-stack;
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    width: 500px;
 }
 #attach_list span.attachName:hover, #attach_list span.remove:hover {
     color: red;
